# Agent-Dashboard-Server

./: .gitignore  README.md
agent/: .gitignore  Cargo.toml  Dockerfile
agent/src/: lib.rs  main.rs
agent/src/config/: mod.rs  settings.rs
agent/src/errors/: app_error.rs  mod.rs
agent/src/models/: metrics.rs  mod.rs
agent/src/repositories/: metrics_repository.rs  mod.rs
agent/src/services/: client.rs  metrics.rs  mod.rs
agent/tests/: agent_tests.rs  metrics_test.rs
agent/tests/repositories/: metrics_repository_test.rs  mod.rs
