[package]
name = "agent"
version = "0.1.0"
edition = "2021"
[build]
target = "x86_64-pc-windows-msvc"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }

# HTTP client para hacer requests
reqwest = { version = "0.11", features = ["json"] }

# Serializaci칩n/Deserializaci칩n de JSON
serde = { version = "1.0", features = ["derive"] }

# Logging estructurado
tracing = "0.1"
tracing-subscriber = "0.3"


# Manejo de errores
anyhow = "1.0"
thiserror = "1.0"

# Configuraci칩n
config = "0.14"

# Fechas y tiempo
chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1.0", features = ["v4", "serde"] }


[dev-dependencies]
# Testing
tokio-test = "0.4"
# Mocks para testing
mockito = "1.2"
# Assertions m치s expresivas
assert2 = "0.3"